# nasa-space-apps-2025-home-grown

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  vite.config.ts
.github/workflows/: deploy-frontend.yml
api/: .env.example  crop_database.py  geodata_processing.py  main.py  pyproject.toml  summary_gen.py
public/: 404.html
src/: App.svelte  app.css  vite-env.d.ts
src/lib/: AreaAnalysisPanel.svelte  CropRecommendationCard.svelte  LearnMore.svelte  MapLayer.svelte  MonthlyTemperatureChart.svelte  PolygonDrawer.svelte  api.ts
src/lib/learn-more/: AboutTab.svelte  ArchitectureTab.svelte  DataTab.svelte  ImpactTab.svelte  MethodologyTab.svelte
