[project]
name = "api"
version = "0.1.0"
description = "Home Grown API - Crop recommendations based on NASA climate data"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "rasterio>=1.4.3",
    "shapely>=2.1.2",
    "pystac-client>=0.9.0",
    "pystac>=1.14.1",
    "planetary-computer>=1.0.0",
    "geopandas>=1.1.1",
    "pandas>=2.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
